# hrtf_personalization

./: .gitignore  README.md  Untitled.ipynb  hrtf_personalization_colab.ipynb  pyproject.toml  run-hrtf  run-predict-binaural  scripts  test-mps.sh
configs/: dataset.yaml  default-anthro.json  default-anthro.json.old  eval-baseline.yaml  eval-conditional.yaml  export.yaml  train-baseline.yaml  train-conditional.yaml
src/hrtf_personalization/: __init__.py  config.py  measurement.py  prediction.py
src/hrtf_personalization/cli/: main.py
src/hrtf_personalization/data/: __init__.py  dataset.py  hrtfcnn.py  hrtfcnn_assets.py  manifest.py
src/hrtf_personalization/evaluation/: __init__.py  metrics.py
src/hrtf_personalization/models/: __init__.py  baseline.py  conditional.py
src/hrtf_personalization/preprocessing/: __init__.py  anthropometrics.py  ear.py
src/hrtf_personalization/rendering/: __init__.py  binaural.py
src/hrtf_personalization/sofa/: __init__.py  export.py
src/hrtf_personalization/training/: __init__.py  loops.py  splits.py
tests/: test_cli.py  test_hrtfcnn.py  test_measurement.py  test_metrics.py  test_models.py  test_prediction.py
